fix: align text to top of drop cap

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -78,10 +78,10 @@
     font-family: 'Spectral SC', serif;
     font-size: 3.5em;
     font-weight: bold;
-    line-height: 1;
+    line-height: 0.85;
     float: left;
-    margin-right: 0.08em;
-    margin-top: 0.05em;
+    margin-right: 0.05em;
+    margin-top: 0;
     color: #58180d;
 }
 
